--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav class="fixed top-0 left-0 right-0 z-50 bg-white/80 backdrop-blur-md border-b">
         <div class="container mx-auto px-4">
             <div class="flex items-center justify-between h-16">
-                <a href="/" class="flex items-center space-x-2">
+                <a href="https://ytsnap.github.io/youtube-downloader" class="flex items-center space-x-2">
                     <span class="text-2xl font-bold bg-gradient-to-r from-blue-600 to-purple-600 bg-clip-text text-transparent">
                         Snapyt
                     </span>
@@ -84,9 +84,9 @@
             </div>
 
             <div class="flex justify-center gap-4 flex-wrap mb-8">
-                <a href="/video" class="px-4 py-2 border rounded-lg hover:bg-gray-50 transition-colors">Video</a>
-                <a href="/shorts" class="px-4 py-2 border rounded-lg hover:bg-gray-50 transition-colors">Shorts</a>
-                <a href="/thumbnail" class="px-4 py-2 border rounded-lg hover:bg-gray-50 transition-colors">Thumbnail</a>
+                <a href="https://ytsnap.github.io/youtube-downloader/video" class="px-4 py-2 border rounded-lg hover:bg-gray-50 transition-colors">Video</a>
+                <a href="https://ytsnap.github.io/youtube-downloader/shorts" class="px-4 py-2 border rounded-lg hover:bg-gray-50 transition-colors">Shorts</a>
+                <a href="https://ytsnap.github.io/youtube-downloader/thumbnail" class="px-4 py-2 border rounded-lg hover:bg-gray-50 transition-colors">Thumbnail</a>
             </div>
 
             <div id="previewContainer" class="hidden w-full max-w-2xl mx-auto mt-8 p-4 bg-white rounded-lg shadow-md">
