--- a/shorts.html
+++ b/shorts.html
@@ -14,7 +14,7 @@
     <nav class="fixed top-0 left-0 right-0 z-50 bg-white/80 backdrop-blur-md border-b">
         <div class="container mx-auto px-4">
             <div class="flex items-center justify-between h-16">
-                <a href="/" class="flex items-center space-x-2">
+                <a href="https://ytsnap.github.io/youtube-downloader/" class="flex items-center space-x-2">
                     <span class="text-2xl font-bold bg-gradient-to-r from-blue-600 to-purple-600 bg-clip-text text-transparent">
                         Snapyt
                     </span>
